    the changelog, and svnpath, which it uses to generate svn tags.
    Closes: #316577
  * debchange: Don't allow --closes in --news mode.
  * debchange: In --news mode, don't include "* Non-maintainer upload."
    entries
  * debchange: In --news mode, separate each new entry with a blank line
    and do not add bullets, to encourage not writing NEWS files like changelog
    files.

 -- Joey Hess <joeyh@debian.org>  Sat,  2 Jul 2005 12:07:54 -0400

devscripts (2.8.14) unstable; urgency=low

  * uscan: fix second showstopper (broken URL parsing) (closes: #301169)

 -- Julian Gilbey <jdg@debian.org>  Thu, 24 Mar 2005 14:33:05 +0000

devscripts (2.8.13) unstable; urgency=low

  * bts: provide --quiet option (closes: #299344)
  * dpkg-depcheck: improve sgml catalog regexp (closes: #295845)
  * uupdate: improve error message (closes: #267317)
  * uscan: fix showstopper (closes: #301177)

 -- Julian Gilbey <jdg@debian.org>  Thu, 24 Mar 2005 09:13:15 +0000

devscripts (2.8.12) unstable; urgency=low

  * bts: allow --mbox etc. options to appear after the show/bugs keyword
    as well as before, and similarly with the "cache" command
  * bts: allow bug numbers to end with a ":" (closes: #300965)
  * debchange: use access rather than stat for checking file permissions
    (closes: #298659); also do same to debi and debuild
  * debdiff: don't hardcode wdiff path
  * debsign: correct obsolete head syntax (closes: #300844)
  * uscan: watch files are now version=3 (should have done this with
    2.8.11, oops)
  * uscan: now support DEHS-style output and --watchfile etc options
  * uscan: also state upstream URL for newer versions (closes: #230813)
  * uscan: handle funny upstream version numbers using multiple groups
    (closes: #282255) and version-number mangling, both for upstream
    version numbers (closes: #266095) and Debian version numbers (closes:
    #261385)
  * uscan: support --rename option to rename file instead of symlinking it
    (closes: #227952)